--- a/index.html
+++ b/index.html
@@ -4,60 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GameMarket</title>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
-    <script>
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              primary: "#0da6f2", // Blue for Market
-              secondary: "#0df20d", // Green for Inventory/Success
-              "background-light": "#f5f7f8",
-              "background-dark": "#101c22",
-              "card-dark": "#182b34",
-              "border-dark": "#223c49",
-              "surface-green": "#162e16", // Specific for inventory
-              "bg-green-dark": "#102210", // Specific for inventory
-            },
-            fontFamily: {
-              display: ["Space Grotesk", "sans-serif"],
-            },
-          },
-        },
-      };
-    </script>
-    <style>
-      body {
-        font-family: "Space Grotesk", sans-serif;
-      }
-      .material-symbols-outlined {
-        font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-      }
-      .material-symbols-filled {
-        font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-      }
-      .custom-scrollbar::-webkit-scrollbar {
-        height: 6px;
-        width: 6px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-track {
-        background: #182b34;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #223c49;
-        border-radius: 10px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #0da6f2;
-      }
-      .grid-bg {
-        background-image: radial-gradient(circle at 1px 1px, #1a3a1a 1px, transparent 0);
-        background-size: 40px 40px;
-      }
-    </style>
+    <link rel="stylesheet" href="/src/input.css" />
   <script type="importmap">
 {
   "imports": {
