test(playwright): add Playwright testing setup and example tests
- Add Playwright test configuration with support for Chromium, Firefox, and WebKit
- Create Playwright GitHub Actions workflow to run tests on push and pull requests
- Install @playwright/test as a dev dependency
- Add example Playwright tests for basic page title and navigation verification
- Update .gitignore to exclude Playwright test artifacts and cache folders
- Add favicon link to HTML head element
- Include favicon SVG file in public directory

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/src/input.css" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <script type="importmap">
 {
   "imports": {
