--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 </head>
   <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white min-h-screen selection:bg-primary/30">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
